@@ -61,6 +61,12 @@ namespace Mingw
             set;
         }
 
+        C.PreprocessorDefinitions C.ICommonWinResourceCompilerSettings.PreprocessorDefines
+        {
+            get;
+            set;
+        }
+
         Bam.Core.StringArray C.IAdditionalSettings.AdditionalSettings
         {
             get;
